--- a/styles/style.css
+++ b/styles/style.css
@@ -287,6 +287,7 @@ font-weight: 600;
 } 
 }
 @media only screen and (min-width:850px){
+  .hero{width:60%}
   
   .section-first .container{
     display: grid;
@@ -358,3 +359,21 @@ padding:0.7rem 1.2rem;
 }
 
 }
+
+@media only screen and (min-width:1000px){
+.hero{
+  width:50%;
+  
+}
+.hero h1{
+  font-size: 3rem;
+  font-weight: 800;
+  line-height:1; 
+  }
+  .hero h2{
+    font-size:2rem;
+  }
+  .hero p{
+    font-size: 1.5rem;
+  }
+} */
